<resources>
    <string name="app_name">Bear_newspaper</string>
    <string name="activity_menu_new">新闻</string>
    <string name="activity_menu_gallery">Test</string>
    <string name="activity_menu_slideshow">图片</string>
    <string name="activity_menu_login">登陆界面</string>
    <string name="activity_menu_model">护眼模式</string>
    <string name="drawer_text">最美的不是夕阳,是我</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="progressBar_content">正在加载.....</string>
</resources>
